fix hospital_id
